[gd_scene load_steps=11 format=3 uid="uid://dg2sqch3jtd3h"]

[ext_resource type="Script" uid="uid://ccfvg0731wml7" path="res://scripts/core/fsm/state_machine.gd" id="1_038oa"]
[ext_resource type="Texture2D" uid="uid://4d68lc3a6uwp" path="res://icon.svg" id="1_p728r"]
[ext_resource type="Script" uid="uid://sagekmxdwjpe" path="res://scripts/enemies/skeleton.gd" id="1_s0h66"]
[ext_resource type="Script" uid="uid://bvecx6fek77np" path="res://scripts/enemies/states/enemy_idle_state.gd" id="2_3mw36"]
[ext_resource type="Script" uid="uid://cndcfdfejnpon" path="res://scripts/components/stats_component.gd" id="2_xxwgs"]
[ext_resource type="Resource" uid="uid://dmqim54pik8nk" path="res://data/stats/dummy_stats.tres" id="3_lj2r1"]
[ext_resource type="Script" uid="uid://cq7nayflwwt05" path="res://scripts/enemies/states/enemy_chase_state.gd" id="4_vncds"]
[ext_resource type="Script" uid="uid://k3eidh3p84ti" path="res://scripts/components/movement_component.gd" id="7_6ucyf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3o7vv"]
radius = 64.0
height = 130.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s0h66"]
radius = 196.125

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_s0h66")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_038oa")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("2_3mw36")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("4_vncds")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("1_p728r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3o7vv")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_xxwgs")
stats_data = ExtResource("3_lj2r1")

[node name="AggroRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRadius"]
shape = SubResource("CircleShape2D_s0h66")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("7_6ucyf")

[connection signal="body_entered" from="AggroRadius" to="." method="_on_aggro_radius_body_entered"]
